last content update

--- a/details-cakes.html
+++ b/details-cakes.html
@@ -60,7 +60,7 @@
 					<li>Start at $1.95 each</li>
 				</ul>
 				<span class="clear"></span>
-				<p>Please call to detail your order for pricing, cakes are as unique as you are!</p>
+				<p>Please call to detail your order and for pricing. Our cakes are as unique as you are!</p>
 			</div>
 			
 		</div> <!-- /#content -->
