--- a/details-catering.html
+++ b/details-catering.html
@@ -44,12 +44,12 @@
 			</ul>
 			<div class="deets-container-1">
 				<div class="background"></div>
-				<p>We cater from small occasions to large events. Using your ideas or helping with menu suggestions, the event will be a success. Ice cream to Salsa Bars, Crepes to Prime Rib, Brownies to Fruit Kabobs!</p>
-				<p>Presentation is as important as great taste, and we will make your choices unique and a hit with your guests! Nobody details the buffet table like" For Every Occasion" does!!</p>
+				<p>We cater from small occasions to large events. By using your ideas or helping with menu suggestions, the event will be a success. We have Ice cream to Salsa Bars, Crepes to Prime Rib, Brownies to Fruit Kabobs!</p>
+				<p>Presentation is as important as great taste. We will make your choices unique and a hit with your guests! Nobody details the buffet table like "For Every Occasion" does!</p>
 			</div>
 			<div class="deets-container-2">
 				<div class="background"></div>
-				<p>Prices start at $2.50 per person and up, depending on menu. Includes all serving ware, décor, set-up, and maintaining your buffet. Let us bid your event and show what we can do!</p>
+				<p>Prices start at $2.50 per person and up, depending on menu. This includes all serving ware, décor, set-up, and maintaining your buffet. Let us bid your event and show what we can do!</p>
 			</div>
 		</div> <!-- /#content -->
 		
