--- a/details-consultant.html
+++ b/details-consultant.html
@@ -45,22 +45,22 @@
 			<div class="deets-container-1">
 				<div class="background"></div>
 				<h4>Consultant -</h4>
-				<p>We're happy to help with ideas and the how too's in order to make your event less stressful</p>
+				<p>We are happy to help with ideas and the how-to's in order to make your event less stressful.</p>
 				<span class="clear"></span>
 				<h4>Planner -</h4>
-				<p>Taking shared ideas and working out the details to make your event everything you hope for. All the details of how to pull it together. We can help you organize so it's ready to set up!</p>
+				<p>We will take shared ideas and work out the details to make your event everything you hope for. This includes all the details of how to pull it together. We can help you organize, so your event is ready to set up!</p>
 				<span class="clear"></span>
 				<h4>Coordinator -</h4>
-				<p class="last">Every detail is taken care of, we make sure your vision is followed through with. Your part is to enjoy and celebrate!</p>
+				<p class="last">We will take care of every detail and make sure your vision is followed through with. Your part is to enjoy and celebrate!</p>
 				<span class="clear"></span>
 			</div>
 			<div class="deets-container-2">
 				<div class="background"></div>
-				<p class="diy"><span>DIY</span>If you want to <b>"do it yourself"</b> we provide everything you need. Vendors, décor, knowledge</p>
+				<p class="diy"><span>DIY</span>If you want to <b>"Do It Yourself,"</b> we provide everything you need. Vendors, décor, and knowledge.</p>
 				<span class="clear"></span>
-				<p class="a-la-carte"><span>A'la Carte</span>You <b>"pick and choose"</b> the services you need help with</p>
+				<p class="a-la-carte"><span>A'la Carte</span>You <b>"Pick and Choose"</b> the services you need help with.</p>
 				<span class="clear"></span>
-				<p class="whole-package"><span>The Whole Package</span>Why reinvent the wheel, <b>"we know what to do"</b>, where to go, at an affordable price</p>
+				<p class="whole-package"><span>The Whole Package</span>Why reinvent the wheel? <b>"We Know What To Do,"</b> and where to go - at an affordable price!</p>
 			</div>
 		</div> <!-- /#content -->
 		
