--- a/details-floral.html
+++ b/details-floral.html
@@ -77,7 +77,7 @@
 					<li>$20.00 and Up</li>
 				</ul>
 				<span class="clear"></span>
-				<p>Each Wedding is Unique and prices shown are for a general estimate.</p>
+				<p>Each Wedding is Unique and prices shown<br />are for a general estimate.</p>
 			</div>
 		</div> <!-- /#content -->
 		
