--- a/details-lighting.html
+++ b/details-lighting.html
@@ -60,7 +60,7 @@
 					<li>Start at $495</li>
 				</ul>
 				<span class="clear"></span>
-				<p>Each Venue is different and we will work to make YOUR OCCASION AMAZING, we give a specific quote to each event and venue!</p>
+				<p>Each venue is different and we will work to make YOUR OCCASION AMAZING. We will give a specific quote for each event and venue!</p>
 			</div>
 			
 		</div> <!-- /#content -->
