--- a/details-music.html
+++ b/details-music.html
@@ -44,7 +44,8 @@
 			</ul>
 			<div class="deets-container-1">
 				<div class="background"></div>
-				<p class="fancy">Setting the Mood for your special occasion is very important. Whether it's soft and calm or loud and exciting, using one of our professionals will get it just right!</p>
+				<p class="fancy">The atmosphere of your event is so important. Whether you want soft and calm or loud
+				and exciting, by using one of our professionals it will be just right!</p>
 			</div>
 			<div class="deets-container-2">
 				<div class="background"></div>
