--- a/details-packages.html
+++ b/details-packages.html
@@ -36,17 +36,15 @@
 		<div id="content" class="packages">
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="packages-header">Packages</h3>
-			<!--
 			<ul class="img-row">
-				<li id="img-1"><img src="img/cakes-img-1.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<li id="img-2"><img src="img/cakes-img-2.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
-				<li id="img-3"><img src="img/cakes-img-3.jpg" title="Wedding Cake" alt="Wedding Cake"></li>
+				<li id="img-1"><img src="img/packages-img-3.jpg" title="Package Display" alt="Package Display"></li>
+				<li id="img-2"><img src="img/packages-img-2.jpg" title="Package Display" alt="Package Display"></li>
+				<li id="img-3"><img src="img/packages-img-1.jpg" title="Package Display" alt="Package Display"></li>
 				<span class="clear"></span>
 			</ul>
-			-->
 			<div class="deets-container-1">
 				<div class="background"></div>
-				<p class="fancy"><b>"Complete Rental Package" &nbsp; $495</b> &nbsp; ($739 value if rented ala cart)</p>
+				<p class="fancy"><b>"Complete Rental Package" &nbsp;$495</b><br />($739 value if rented A'la Carte)</p>
 				<ul>
 					<li>Sign In Table Set (includes Linen)</li>
 					<li>Bridal Easel</li>
@@ -55,17 +53,17 @@
 					<li>Backdrop (Arch Selection)</li>
 					<li>8 - Guest Tables 5'</li>
 					<li>8 - Linens (White or Ivory)</li>
-					<li>8 -Centerpieces (Square Glass or Lantern)</li>
+					<li>8 - Centerpieces (Square Glass or Lantern)</li>
 					<li>64 - White Wedding Chairs</li>
 					<li>Banquet Table</li>
 					<li>Banquet Table Linen</li>
 				</ul>
-				<p class="fancy"><b>Let us decorate this package for you! Only $225</b></p>
+				<p class="fancy"><b>Let us decorate this package for you! Only $225 More!</b></p>
 				<p>64 Free Chair Ties!</p>
 			</div>
 			<div class="deets-container-2">
 				<div class="background"></div>
-				<p class="fancy"><b>"Signature Rental Package" &nbsp; $795</b> &nbsp; ($1220 value if rented ala cart)</p>
+				<p class="fancy"><b>"Signature Rental Package" &nbsp;$795</b><br />($1220 value if rented A'la Carte)</p>
 				<ul>
 					<li>Sign In Table Set (includes; Linen, Card Holder, Panel)</li>
 					<li>2 - Bridal Easels</li>
@@ -82,7 +80,7 @@
 					<li>4 - Shepherd Hooks with Lanterns</li>
 					<li>TV / DVD Setup</li>
 				</ul>
-				<p class="fancy"><b>Let us decorate this package for you! Only $325</b></p>
+				<p class="fancy"><b>Let us decorate this package for you! Only $325 More!</b></p>
 				<p>80 Free Chair Ties!</p>
 			</div>
 			
