--- a/details-specialEvents.html
+++ b/details-specialEvents.html
@@ -67,7 +67,7 @@
 					<li>&ast; A place that's; happening with new ideas, displays, new trends, and old values,</li>
 					<li>&ast; A place you can experience the art of "do it yourself" or turn it all over to us,</li>
 					<li>&ast; A place where you, family and friends can go that's warm, inviting and stress free...</li>
-					<li style="padding-top: 30px; font-size: 28px;"><b>For Every Occasion<br/>is that place!</b></li>
+					<li style="padding-top: 30px; font-size: 28px;"><b><img src="img/logo-2.png" title="For Every Occasion" alt="For Every Occasion"><br/>is that place!</b></li>
 				</ul>
 			</div>
 		</div> <!-- /#content -->
