--- a/services.html
+++ b/services.html
@@ -39,31 +39,31 @@
 				<li class="consultant">
 					<a class="services-thumbnail" href="details-consultant.html"><img src="img/thumbnail-consultant.jpg" alt=""></a>
 					<h3><a href="details-consultant.html">Consultant / Planner / Coordinator</a></h3>
-					<p>You decide! Do you just need some advice to pull it together or do you want all the details taken care of. &nbsp;<a href="details-consultant.html">Click Here</a> for more details.</p>
+					<p>Do you just need some advice to pull your event together, or do you want all the details taken care of? &nbsp;<a href="details-consultant.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
 				<li class="packages">
 					<a class="services-thumbnail" href="details-packages.html"><img src="img/thumbnail-floral.jpg" alt=""></a>
 					<h3><a href="details-packages.html">Packages</a></h3>
-					<p>Ready to go rentals * Go with one of our packages that meets your need or customize one of your liking.<br /><a href="details-packages.html">Click Here</a> for more details.</p>
+					<p>We have <em>Ready-to-Go Rentals!</em> You can choose from one of our packages or customize one to your liking.<br /><a href="details-packages.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
 				<li class="catering">
 					<a class="services-thumbnail" href="details-catering.html"><img src="img/thumbnail-catering.jpg" alt=""></a>
 					<h3><a href="details-catering.html">Catering / Refreshments</a></h3>
-					<p>Variety of delicious menus! Big in taste, not in the price<br /><a href="details-catering.html">Click Here</a> for more details.</p>
+					<p>We have a variety of delicious menus! You can be sure they are big in taste, but not in price.<br /><a href="details-catering.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
 				<li class="decorations">
 					<a class="services-thumbnail" href="details-decorations.html"><img src="img/thumbnail-decorations.jpg" alt=""></a>
 					<h3><a href="details-decorations.html">Decorations / Rentals</a></h3>
-					<p>Tables, Chairs, Linens, Backdrops and everything else you may need!<br /><a href="details-decorations.html">Click Here</a> for more details.</p>
+					<p>We provide tables, chairs, linens, backdrops and everything else you may need! <a href="details-decorations.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
 				<li class="invitations">
 					<a class="services-thumbnail" href="details-invitations.html"><img src="img/thumbnail-invitations.jpg" alt=""></a>
 					<h3><a href="details-invitations.html">Invitations</a></h3>
-					<p>Style, Quality, and Value..... You must take a look at these!!!<br /><a href="details-invitations.html">Click Here</a> for more details.</p>
+					<p>Style, Quality, and Value... You must take a look at these!<br /><a href="details-invitations.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
 				<li class="flowers">
@@ -75,13 +75,13 @@
 				<li class="cakes">
 					<a class="services-thumbnail" href="details-cakes.html"><img src="img/thumbnail-cake.jpg" alt=""></a>
 					<h3><a href="details-cakes.html">Cakes * Cupcakes</a></h3>
-					<p>We of it all.. Any size, design and price range.... Yum<br /><a href="details-cakes.html">Click Here</a> for more details.</p>
+					<p>We provide any size, design, and price range. Not only do our cakes look beautiful, they taste delicious, too!<br /><a href="details-cakes.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
 				<li class="music">
 					<a class="services-thumbnail" href="details-music.html"><img src="img/thumbnail-music.jpg" alt=""></a>
 					<h3><a href="details-music.html">Music</a></h3>
-					<p>DJ's, Harpist, Pianist, Stereo System<br /><a href="details-music.html">Click Here</a> for more details.</p>
+					<p>Our music options include a Harpist, Pianist, Stereo System, and DJ's.<br /><a href="details-music.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
 				<li class="lighting">
