--- a/details-decorations.html
+++ b/details-decorations.html
@@ -45,7 +45,7 @@
 			<div class="deets-container-1">
 				<div class="background"></div>
 				<ul class="price-description">
-					<li>Wedding Chairs<br />(White or Black)</li>
+					<li>Wedding Chairs<br /><div class="small">(White or Black)</div></li>
 					<li>Tables</li>
 					<li>Linens</li>
 					<li>Runners / Overlays</li>
@@ -54,8 +54,7 @@
 					<li>Accessories</li>
 				</ul>
 				<ul class="pricing">
-					<li>$2.00 each</li>
-					<li>&nbsp;</li>
+					<li>$2.00 each<br /><div class="small">&nbsp;</div></li>
 					<li>$8.00 each</li>
 					<li>$11.00 and up</li>
 					<li>$5.00 and up</li>
