adding in last 3 images to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -96,6 +96,9 @@
 						<li><a href="img/gallery/54.jpg"><img src="img/gallery/thumbs/t54.jpg" class="image53"></a></li>
 						<li><a href="img/gallery/55.jpg"><img src="img/gallery/thumbs/t55.jpg" class="image54"></a></li>
 						<li><a href="img/gallery/56.jpg"><img src="img/gallery/thumbs/t56.jpg" class="image55"></a></li>
+						<li><a href="img/gallery/57.jpg"><img src="img/gallery/thumbs/t57.jpg" class="image56"></a></li>
+						<li><a href="img/gallery/58.jpg"><img src="img/gallery/thumbs/t58.jpg" class="image57"></a></li>
+						<li><a href="img/gallery/59.jpg"><img src="img/gallery/thumbs/t59.jpg" class="image58"></a></li>
 					</ul>
 				</div>
 			</div>
