updating the version of jquery library used

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta name="author" content="Tyler Nielsen, tynielsen@gmail.com">
 	<meta name="description" content="We handle all the details of your event, whether big or small - Contact us today to learn more about our services and schedule your special occasion!">
 	<meta name="keywords" content="for every occasion rentals, for every occasion, every, occasion, wedding professionals, wedding planner, wedding, consultant, planner, coordinator, wedding help, special, event, bride, bridal, shower, showers, baby, graduation, family, reunion, birthday, party, parties, engage, engaged, engagement, anniversary, quinceanera, farewell, homecoming, company, holiday, decorating, decoration, cake, invitations, flower, floral, bouquet, boutonniere, rental, rent, music, musician, dj, mc, harp, harpist, professional, profession, exciting, piano, pianist, stereo, cordless, mic, tv, dvd, lighting, lights, caterer, catering, utah">
-	
+
 	<title>For Every Occasion Rentals</title>
-	
+
 	<link href="img/favicon.png" type="img/png" rel="icon">
 	<link href="css/reset.css" type="text/css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
@@ -16,7 +16,7 @@
 	<!--[if lt IE 9]>
 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	
+
 </head>
 <body>
 	<div id="home" class="page">
@@ -32,16 +32,14 @@
 				</ul>
 			</header>
 		</div> <!-- /#header-container -->
-		
 		<div id="content">
 			<ul class="image-carousel">
-				<li class="active"><img src="img/home-carousel-img-1.jpg" src="" /></li>
-				<li><img src="img/home-carousel-img-2.jpg" src="" /></li>
-				<li><img src="img/home-carousel-img-3.jpg" src="" /></li>
+				<li class="active"><img src="img/home-carousel-img-1.jpg" alt=""></li>
+				<li><img src="img/home-carousel-img-2.jpg" alt=""></li>
+				<li><img src="img/home-carousel-img-3.jpg" alt=""></li>
 			</ul>
-			<p class="intro-p">We handle all the details of your event, whether big or small - Contact us today to learn more about our services and schedule your special occasion!</p>
+			<p class="intro-p">We handle all the details of your event, whether big or small. Contact us today to learn more about our services and schedule your special occasion!</p>
 		</div> <!-- /#content -->
-		
 		<footer>
 			<p>&copy; Copyright 2012 - For Every Occasion, LLC. All rights reserved.</p>
 			<ul id="footer-nav">
@@ -55,9 +53,10 @@
 	</div>
 	<div id="rpt-rose-left" class="frame"></div>
 	<div id="rpt-rose-right" class="frame"></div>
-	
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script type="text-javascript" src="js/jquery.ad-gallery.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	
+
 </body>
 </html>
