--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
 				<li class="consultant">
 					<a class="services-thumbnail" href="details-consultant.html"><img src="img/thumbnail-consultant.jpg" alt=""></a>
 					<h3><a href="details-consultant.html">Consultant / Planner / Coordinator</a></h3>
-					<p>Do you just need some advice to pull your event together, or do you want all the details taken care of? &nbsp;<a href="details-consultant.html">Click Here</a> for more details.</p>
+					<p>Do you need some advice to pull your event together, or do you want all the details taken care of? &nbsp;<a href="details-consultant.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
 				<li class="packages">
@@ -114,7 +114,7 @@
 	<div id="rpt-gold-ribbon-left" class="frame"></div>
 	<div id="rpt-gold-ribbon-right" class="frame"></div>
 	
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	
 </body>
