--- a/services.html
+++ b/services.html
@@ -36,12 +36,6 @@
 		<div id="content">
 			
 			<ul class="services-list">
-				<li class="consultant">
-					<a class="services-thumbnail" href="details-consultant.html"><img src="img/thumbnail-consultant.jpg" alt=""></a>
-					<h3><a href="details-consultant.html">Consultant / Planner / Coordinator</a></h3>
-					<p>Do you need some advice to pull your event together, or do you want all the details taken care of? &nbsp;<a href="details-consultant.html">Click Here</a> for more details.</p>
-					<span class="clear"></span>
-				</li>
 				<li class="packages">
 					<a class="services-thumbnail" href="details-packages.html"><img src="img/thumbnail-floral.jpg" alt=""></a>
 					<h3><a href="details-packages.html">Packages</a></h3>
@@ -54,22 +48,42 @@
 					<p>We have a variety of delicious menus! You can be sure they are big in taste, but not in price.<br /><a href="details-catering.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
+				<li class="flowers">
+					<a class="services-thumbnail" href="details-floral.html"><img src="img/thumbnail-floral.jpg" alt=""></a>
+					<h3><a href="details-floral.html">Floral</a></h3>
+					<p>We have many creative floral designs especially for you.<br /><a href="details-floral.html">Click Here</a> for more details.</p>
+					<span class="clear"></span>
+				</li>
 				<li class="decorations">
 					<a class="services-thumbnail" href="details-decorations.html"><img src="img/thumbnail-decorations.jpg" alt=""></a>
-					<h3><a href="details-decorations.html">Decorations / Rentals</a></h3>
+					<h3><a href="details-decorations.html">Decor / Rentals</a></h3>
 					<p>We provide tables, chairs, linens, backdrops and everything else you may need! <a href="details-decorations.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
+				<li class="lighting">
+					<a class="services-thumbnail" href="details-lighting.html"><img src="img/thumbnail-lighting.jpg" alt=""></a>
+					<h3><a href="details-lighting.html">Lighting</a></h3>
+					<p>We'll be happy to customize a design for your venue.<br /><a href="details-lighting.html">Click Here</a> for more details.</p>
+					<span class="clear"></span>
+				</li>
+				<li class="consultant">
+					<a class="services-thumbnail" href="details-consultant.html"><img src="img/thumbnail-consultant.jpg" alt=""></a>
+					<h3><a href="details-consultant.html">Consultant / Planner / Coordinator</a></h3>
+					<p>Do you need some advice to pull your event together, or do you want all the details taken care of? &nbsp;<a href="details-consultant.html">Click Here</a> for more details.</p>
+					<span class="clear"></span>
+				</li>
+				<li class="special-events">
+					<a class="services-thumbnail" href="details-specialEvents.html"><img src="img/thumbnail-specialEvents.jpg" alt=""></a>
+					<h3><a href="details-specialEvents.html">Special Events</a></h3>
+					<p>For Every Occasion can help with all of your celebrations.<br /><a href="details-specialEvents.html">Click Here</a> for more details.</p>
+					<span class="clear"></span>
+				</li>
+
+				<!--
 				<li class="invitations">
 					<a class="services-thumbnail" href="details-invitations.html"><img src="img/thumbnail-invitations.jpg" alt=""></a>
 					<h3><a href="details-invitations.html">Invitations</a></h3>
 					<p>Style, Quality, and Value... You must take a look at these!<br /><a href="details-invitations.html">Click Here</a> for more details.</p>
-					<span class="clear"></span>
-				</li>
-				<li class="flowers">
-					<a class="services-thumbnail" href="details-floral.html"><img src="img/thumbnail-floral.jpg" alt=""></a>
-					<h3><a href="details-floral.html">Flowers</a></h3>
-					<p>We have many creative floral designs especially for you.<br /><a href="details-floral.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
 				<li class="cakes">
@@ -84,18 +98,7 @@
 					<p>Our music options include a Harpist, Pianist, Stereo System, and DJ's.<br /><a href="details-music.html">Click Here</a> for more details.</p>
 					<span class="clear"></span>
 				</li>
-				<li class="lighting">
-					<a class="services-thumbnail" href="details-lighting.html"><img src="img/thumbnail-lighting.jpg" alt=""></a>
-					<h3><a href="details-lighting.html">Lighting</a></h3>
-					<p>We'll be happy to customize a design for your venue.<br /><a href="details-lighting.html">Click Here</a> for more details.</p>
-					<span class="clear"></span>
-				</li>
-				<li class="special-events">
-					<a class="services-thumbnail" href="details-specialEvents.html"><img src="img/thumbnail-specialEvents.jpg" alt=""></a>
-					<h3><a href="details-specialEvents.html">Special Events</a></h3>
-					<p>For Every Occasion can help with all of your celebrations.<br /><a href="details-specialEvents.html">Click Here</a> for more details.</p>
-					<span class="clear"></span>
-				</li>
+				-->
 			</ul>
 			
 		</div> <!-- /#content -->
