messing around with styles, adding in social buttons

--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
 				<li><img src="img/home-carousel-img-3.jpg" alt=""></li>
 			</ul>
 			<p class="intro-p">We handle all the details of your event, whether big or small. Contact us today to learn more about our services and schedule your special occasion!</p>
+			<ul class="social-links">
+				<li>
+					<a class="facebook" href="#">Facebook</a>
+				</li>
+				<li>
+					<a class="twitter" href="#">Twitter</a>
+				</li>
+				<li>
+					<a class="pinterest" href="#">Pinterest</a>
+				</li>
+				<li>
+					<a class="weddings-r-us" href="#">Weddings r us</a>
+				</li>
+			</ul>
 		</div> <!-- /#content -->
 		<footer>
 			<p>&copy; Copyright 2012 - For Every Occasion, LLC. All rights reserved.</p>
@@ -51,9 +65,10 @@
 			<span class="clear"></span>
 		</footer>
 	</div>
+	
 	<div id="rpt-rose-left" class="frame"></div>
 	<div id="rpt-rose-right" class="frame"></div>
-
+	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text-javascript" src="js/jquery.ad-gallery.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
