adding the utah wedding centre icon and link

--- a/index.html
+++ b/index.html
@@ -39,19 +39,22 @@
 				<li><img src="img/home-carousel-img-3.jpg" alt=""></li>
 			</ul>
 			<p class="intro-p">We handle all the details of your event, whether big or small. Contact us today to learn more about our services and schedule your special occasion!</p>
+			<a class="link-utahWeddingCentre" href="http://www.utahweddingcentre.com" target="_blank">Utah Wedding Centre</a>
 			<ul class="social-links">
 				<li>
-					<a class="facebook" href="#">Facebook</a>
+					<a class="facebook" href="http://www.facebook.com" target="_blank">Facebook</a>
 				</li>
 				<li>
-					<a class="twitter" href="#">Twitter</a>
+					<a class="twitter" href="http://www.twitter.com" target="_blank">Twitter</a>
 				</li>
 				<li>
-					<a class="pinterest" href="#">Pinterest</a>
+					<a class="pinterest" href="http://www.pinterest.com" target="_blank">Pinterest</a>
 				</li>
+				<!--
 				<li>
-					<a class="weddings-r-us" href="#">Weddings r us</a>
+					<a class="weddings-r-us" href="#" target="_blank">Weddings r us</a>
 				</li>
+				-->
 			</ul>
 		</div> <!-- /#content -->
 		<footer>
