fix cors origin error, minor bug fixes to envelope gallery script to run on gallery page only

--- a/details-lighting.html
+++ b/details-lighting.html
@@ -5,18 +5,18 @@
 	<meta name="author" content="Tyler Nielsen, tynielsen@gmail.com">
 	<meta name="description" content="We handle all the details of your event, whether big or small - Contact us today to learn more about our services and schedule your special occasion!">
 	<meta name="keywords" content="for every occasion rentals, for every occasion, every, occasion, wedding professionals, wedding planner, wedding, consultant, planner, coordinator, wedding help, special, event, bride, bridal, shower, showers, baby, graduation, family, reunion, birthday, party, parties, engage, engaged, engagement, anniversary, quinceanera, farewell, homecoming, company, holiday, decorating, decoration, cake, invitations, flower, floral, bouquet, boutonniere, rental, rent, music, musician, dj, mc, harp, harpist, professional, profession, exciting, piano, pianist, stereo, cordless, mic, tv, dvd, lighting, lights, caterer, catering, utah">
-	
+
 	<title>Service Details || For Every Occasion</title>
-	
+
 	<link href="img/favicon.png" type="img/png" rel="icon">
 	<link href="css/reset.css" type="text/css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
 	<link href="css/main.css" type="text/css" rel="stylesheet">
 	<!--[if lt IE 9]>
 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	
+
 </head>
 <body>
 	<div id="service-details" class="page">
@@ -32,7 +32,7 @@
 				</ul>
 			</header>
 		</div> <!-- /#header-container -->
-		
+
 		<div id="content" class="lighting">
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="lighting-header">Lighting and Drapery</h3>
@@ -62,9 +62,9 @@
 				<span class="clear"></span>
 				<p>Each venue is different and we will work to make YOUR OCCASION AMAZING. We will give a specific quote for each event and venue!</p>
 			</div>
-			
+
 		</div> <!-- /#content -->
-		
+
 		<footer>
 			<p>&copy; Copyright 2012 - For Every Occasion, LLC. All rights reserved.</p>
 			<ul id="footer-nav">
@@ -78,9 +78,9 @@
 	</div>
 	<div id="rpt-red-ribbon-left" class="frame"></div>
 	<div id="rpt-red-ribbon-right" class="frame"></div>
-	
+
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	
+
 </body>
 </html>
