--- a/contact.html
+++ b/contact.html
@@ -5,18 +5,18 @@
 	<meta name="author" content="Tyler Nielsen, tynielsen@gmail.com">
 	<meta name="description" content="We handle all the details of your event, whether big or small - Contact us today to learn more about our services and schedule your special occasion!">
 	<meta name="keywords" content="for every occasion rentals, for every occasion, every, occasion, wedding professionals, wedding planner, wedding, consultant, planner, coordinator, wedding help, special, event, bride, bridal, shower, showers, baby, graduation, family, reunion, birthday, party, parties, engage, engaged, engagement, anniversary, quinceanera, farewell, homecoming, company, holiday, decorating, decoration, cake, invitations, flower, floral, bouquet, boutonniere, rental, rent, music, musician, dj, mc, harp, harpist, professional, profession, exciting, piano, pianist, stereo, cordless, mic, tv, dvd, lighting, lights, caterer, catering, utah">
-	
+
 	<title>Contact Us || For Every Occasion</title>
-	
+
 	<link href="img/favicon.png" type="img/png" rel="icon">
 	<link href="css/reset.css" type="text/css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
 	<link href="css/main.css" type="text/css" rel="stylesheet">
 	<!--[if lt IE 9]>
 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	
+
 </head>
 <body>
 	<div id="contact-us" class="page">
@@ -32,7 +32,7 @@
 				</ul>
 			</header>
 		</div> <!-- /#header-container -->
-		
+
 		<div id="content">
 			<div class="column-1">
 				<h2 class="text-contactUs">Contact Us</h2>
@@ -159,11 +159,11 @@
 				<span id="sprytextarea_comments">
 					<label for="comments">Comments:</label>
 					<textarea name="comments" id="comments" maxlength="500"></textarea>
-				</span> 
+				</span>
 				<input type="submit" value="Send" class="submit">
 			</form>
 		</div> <!-- /#content -->
-		
+
 		<footer>
 			<p>&copy; Copyright 2012 - For Every Occasion, LLC. All rights reserved.</p>
 			<ul id="footer-nav">
@@ -177,9 +177,9 @@
 	</div>
 	<div id="rpt-gold-ribbon-left" class="frame"></div>
 	<div id="rpt-gold-ribbon-right" class="frame"></div>
-	
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> 
+
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	
+
 </body>
 </html>
