--- a/details-invitations.html
+++ b/details-invitations.html
@@ -5,18 +5,18 @@
 	<meta name="author" content="Tyler Nielsen, tynielsen@gmail.com">
 	<meta name="description" content="We handle all the details of your event, whether big or small - Contact us today to learn more about our services and schedule your special occasion!">
 	<meta name="keywords" content="for every occasion rentals, for every occasion, every, occasion, wedding professionals, wedding planner, wedding, consultant, planner, coordinator, wedding help, special, event, bride, bridal, shower, showers, baby, graduation, family, reunion, birthday, party, parties, engage, engaged, engagement, anniversary, quinceanera, farewell, homecoming, company, holiday, decorating, decoration, cake, invitations, flower, floral, bouquet, boutonniere, rental, rent, music, musician, dj, mc, harp, harpist, professional, profession, exciting, piano, pianist, stereo, cordless, mic, tv, dvd, lighting, lights, caterer, catering, utah">
-	
+
 	<title>Service Details || For Every Occasion</title>
-	
+
 	<link href="img/favicon.png" type="img/png" rel="icon">
 	<link href="css/reset.css" type="text/css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
 	<link href="css/main.css" type="text/css" rel="stylesheet">
 	<!--[if lt IE 9]>
 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	
+
 </head>
 <body>
 	<div id="service-details" class="page">
@@ -32,7 +32,7 @@
 				</ul>
 			</header>
 		</div> <!-- /#header-container -->
-		
+
 		<div id="content" class="invitations">
 			<a class="btn-back" href="services.html">Back</a>
 			<h3 class="invitations-header">Invitations</h3>
@@ -44,20 +44,20 @@
 			</ul>
 			<div class="deets-container-1">
 				<div class="background"></div>
-				<p><img src="img/logo-2.png" title="For Every Occasion" alt="For Every Occasion"><br />has teamed with<br /><a href="http://www.beautifulweddingannouncements.com/" target="_blank"><img src="img/beautifulWeddingAnnouncements-logo.png" title="Beautiful Wedding Announcements" alt="Beautiful Wedding Announcements"></a></p>
+				<p><img src="img/logo-2.png" title="For Every Occasion" alt="For Every Occasion"><br />has teamed with<br /><a href="https://shopbwa.com/" target="_blank"><img src="img/beautifulWeddingAnnouncements-logo.png" title="Beautiful Wedding Announcements" alt="Beautiful Wedding Announcements"></a></p>
 				<p>to get you Great Invitations at<br />an EXCLUSIVE PRICE!</p>
 			</div>
 			<div class="deets-container-2">
 				<div class="background"></div>
 				<p class="fancy">Here's How</p>
-				<p><strong>&ast; Get 5% OFF</strong> "<a class="basic-link" href="http://www.beautifulweddingannouncements.com/" target="_blank">Beautiful Wedding Announcements</a>" already great prices by simply emailing "<a class="basic-link" href="mailto:4everyoccasion@gmail.com">For Every Occasion</a>" Your Name and Wedding Date</p>
-				<p><strong>&ast; Get 10% OFF</strong> "<a class="basic-link" href="http://www.beautifulweddingannouncements.com/" target="_blank">Beautiful Wedding Announcements</a>" already great prices by using $500 of "<a class="basic-link" href="mailto:4everyoccasion@gmail.com">For Every Occasion</a>" Services</p>
-				<p><strong>&ast; Get 15% OFF</strong> "<a class="basic-link" href="http://www.beautifulweddingannouncements.com/" target="_blank">Beautiful Wedding Announcements</a>" already great prices by using $1000 of "<a class="basic-link" href="mailto:4everyoccasion@gmail.com">For Every Occasion</a>" Services</p>
-				<p><a class="basic-link" href="http://www.beautifulweddingannouncements.com/" target="_blank">www.beautifulweddingannouncements.com</a></p>
+				<p><strong>&ast; Get 5% OFF</strong> "<a class="basic-link" href="https://shopbwa.com/" target="_blank">Beautiful Wedding Announcements</a>" already great prices by simply emailing "<a class="basic-link" href="mailto:4everyoccasion@gmail.com">For Every Occasion</a>" Your Name and Wedding Date</p>
+				<p><strong>&ast; Get 10% OFF</strong> "<a class="basic-link" href="https://shopbwa.com/" target="_blank">Beautiful Wedding Announcements</a>" already great prices by using $500 of "<a class="basic-link" href="mailto:4everyoccasion@gmail.com">For Every Occasion</a>" Services</p>
+				<p><strong>&ast; Get 15% OFF</strong> "<a class="basic-link" href="https://shopbwa.com/" target="_blank">Beautiful Wedding Announcements</a>" already great prices by using $1000 of "<a class="basic-link" href="mailto:4everyoccasion@gmail.com">For Every Occasion</a>" Services</p>
+				<p><a class="basic-link" href="https://shopbwa.com/" target="_blank">www.beautifulweddingannouncements.com</a></p>
 			</div>
-			
+
 		</div> <!-- /#content -->
-		
+
 		<footer>
 			<p>&copy; Copyright 2012 - For Every Occasion, LLC. All rights reserved.</p>
 			<ul id="footer-nav">
@@ -71,9 +71,9 @@
 	</div>
 	<div id="rpt-red-ribbon-left" class="frame"></div>
 	<div id="rpt-red-ribbon-right" class="frame"></div>
-	
+
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	
+
 </body>
 </html>
