--- a/gallery.html
+++ b/gallery.html
@@ -7,19 +7,19 @@
 	<meta name="keywords" content="for every occasion rentals, for every occasion, every, occasion, wedding professionals, wedding planner, wedding, consultant, planner, coordinator, wedding help, special, event, bride, bridal, shower, showers, baby, graduation, family, reunion, birthday, party, parties, engage, engaged, engagement, anniversary, quinceanera, farewell, homecoming, company, holiday, decorating, decoration, cake, invitations, flower, floral, bouquet, boutonniere, rental, rent, music, musician, dj, mc, harp, harpist, professional, profession, exciting, piano, pianist, stereo, cordless, mic, tv, dvd, lighting, lights, caterer, catering, utah">
 
 	<title>Gallery || For Every Occasion</title>
-	
+
 	<link href="img/favicon.png" type="img/png" rel="icon">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link href='http://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.ad-gallery.css">
 	<!--[if lt IE 9]>
 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	
+
 </head>
-<body>
+<body class="gallery">
 	<div id="header-container">
 		<header>
 			<a id="logo" href="index.html">For Every Occasion</a>
@@ -32,7 +32,7 @@
 			</ul>
 		</header>
 	</div> <!-- /#header-container -->
-	
+
 	<div id="container">
 		<div id="gallery" class="ad-gallery">
 			<div class="ad-controls">
@@ -117,10 +117,10 @@
 	</footer>
 	<div id="rpt-gold-ribbon-left" class="frame"></div>
 	<div id="rpt-gold-ribbon-right" class="frame"></div>
-	
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.ad-gallery.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	
+
 </body>
 </html>
