--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 	<link href="img/favicon.png" type="img/png" rel="icon">
 	<link href="css/reset.css" type="text/css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Rosario:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
 	<link href="css/main.css" type="text/css" rel="stylesheet">
 	<!--[if lt IE 9]>
 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -39,22 +39,17 @@
 				<li><img src="img/home-carousel-img-3.jpg" alt=""></li>
 			</ul>
 			<p class="intro-p">We handle all the details of your event, whether big or small. Contact us today to learn more about our services and schedule your special occasion!</p>
-			<a class="link-utahWeddingCentre" href="http://www.utahweddingcentre.com" target="_blank">Utah Wedding Centre</a>
+			<a class="link-utahWeddingCentre" href="www.utahweddingcentre.com" target="_blank">Utah Wedding Centre</a>
 			<ul class="social-links">
 				<li>
-					<a class="facebook" href="http://www.facebook.com" target="_blank">Facebook</a>
+					<a class="facebook" href="https://www.facebook.com/ForEveryOccasion/" target="_blank">Facebook</a>
 				</li>
 				<li>
-					<a class="twitter" href="http://www.twitter.com" target="_blank">Twitter</a>
+					<a class="twitter" href="https://x.com/ForEveryOccasio?s=20" target="_blank">Twitter</a>
 				</li>
 				<li>
-					<a class="pinterest" href="http://www.pinterest.com" target="_blank">Pinterest</a>
+					<a class="pinterest" href="https://www.pinterest.co.uk/feoballoons/" target="_blank">Pinterest</a>
 				</li>
-				<!--
-				<li>
-					<a class="weddings-r-us" href="#" target="_blank">Weddings r us</a>
-				</li>
-				-->
 			</ul>
 		</div> <!-- /#content -->
 		<footer>
@@ -68,10 +63,10 @@
 			<span class="clear"></span>
 		</footer>
 	</div>
-	
+
 	<div id="rpt-rose-left" class="frame"></div>
 	<div id="rpt-rose-right" class="frame"></div>
-	
+
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text-javascript" src="js/jquery.ad-gallery.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
